--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     </head>
 
     <body>
+        <a id="imprint" href="https://www.philippwasser.de/imprint/">Impressum</a>
+
+
         <div id="map"></div>
         <script src="js/main.js"></script>
     </body>
